k8-manifestfiles/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: frontend
   namespace: three-tier
   labels:
     role: frontend 
     env: demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend 
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
        - name: frontend 
          image:  025066245469.dkr.ecr.us-east-1.amazonaws.com/three-tier-frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
