k8-manifestfiles/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: three-tier
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    role: frontend
  type: ClusterIP
